--- a/templates/index.html
+++ b/templates/index.html
@@ -13,18 +13,14 @@
     <form autocomplete="off"  class="myForm" method="post">
 
     <div class="row">
-      <div class="col-sm">
+      <div class="col-sm-12">
         <label class="formLabel" for="title"><b>Titulo do Post:</b></label><br>
-        </div>
-      <div class="col-sm">
         <input id="title" name="title" class="mybox form-control" type="text" placeholder="Titulo" required><br>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm">
+      <div class="col-sm-12">
         <label class="formLabel" for="content"><b>Conteudo:</b></label>
-      </div>
-      <div class="col-sm">
         <textarea  id="content" name="content" class="form-control" rows="3" placeholder="Conteudo" required></textarea>
       </div>
     </div>
