--- a/templates/resetPassSend.html
+++ b/templates/resetPassSend.html
@@ -12,7 +12,9 @@
         <input id="username" name="username" class="mybox form-control" type="username" placeholder="Nome de Usuario"><br>
       </div>
     </div>
-    <input id="button" class="btn btn-primary" type="submit" value="Resetar Senha">
+    
+    <input id="button" class="btn btn-primary" type="submit" value="Resetar Senha" style="float: none;width: 50%;">
+    
   </form>
 </div>
 {% if error %}
