--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,8 @@
 {% extends 'base.html' %}
-
 {% block content %}
-{%if posts %}
-{% for post in posts %}
-    <div class="board"> <a class="postLink" href={{post[3]}}>{{post[1]}}</a></div class="board"> 
-{% endfor %}
-{% endif %}
-  
-<div class="board">
+
+ 
+<div class="board" style="margin-top: 30px;">
   <h1 class="centralized">{% block title %}Novo Post{% endblock %}</h1>
   
     <form autocomplete="off"  class="myForm" method="post">
@@ -24,11 +19,25 @@
         <textarea  id="content" name="content" class="form-control" rows="3" placeholder="Conteudo" required></textarea>
       </div>
     </div>
+    <div class="botoesLogin">
+      <input id="button" class="btn btn-info" type="button" value="logout" onclick="location.href='/logout'">
+      <input id="button" class="btn btn-primary" type="submit" value="postar">
+    </div>
     
-    <a href="/logout" id="logout" class="logout btn btn-info" value="logout">logout</a>
-    <input id="button" class="btn btn-primary" type="submit" value="postar">
   </form>
 </div>
+
+
+  {%if posts %}
+  <div class="posts">
+    {% for post in posts %}
+        <div class="board" style="margin-top: 10px;"> <a class="postLink" href={{post[3]}}>{{post[1]}}</a></div class="board"> 
+    {% endfor %}
+  </div>
+  {% endif %}
+
+
+
 {% if error %}
   <div class="erro alert alert-danger" role="alert">
     {{ error}}
