added error if host is wrong

--- a/static/style.css
+++ b/static/style.css
@@ -24,6 +24,12 @@
 }
 
 
+#erro {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 
 .centralized {
     text-align: center;
